# modern-python-2024-demo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cspell-tool.txt  docker-compose.yml  fly.toml  pyproject.toml
src/modern_python_2024_demo/: __init__.py  main.py
